styles/globals.scss
/* ... */
.content-bar {
  padding: 3px 0;
  display: block;
  border-top: 1px solid #e7ebf5;
  border-bottom: 1px solid #e7ebf5;
  margin-top: -1px;
  .listings-wrapper {
    display: flex;
    flex-wrap: wrap;
  }
  .container {
    padding: 0;
  }
  .content-bar---wrapper {
    margin: 0 -8px;
  }
  .content-bar---item a {
    display: flex;
    align-items: center;
    padding: 8px 0;
    margin: 0 10px 0 8px;
    .content-bar---col.left {
      display: flex;
    }
  }
  .content-bar---item svg {
    width: 21px;
    height: 21px;
  }
  .content-bar---item .right {
    margin-left: 7px;
  }
  .content-bar---item .right p {
    line-height: 1.2em;
    font-size: 0.9em;
    margin: 0;
    white-space: nowrap;
    white-space: nowrap;
  }
}

/*---HEADER STYLES---*/
/*---TOP NAV---*/

.top-nav {
  padding: 0 !important;
  background-image: url("https://res.cloudinary.com/juligoodie/image/upload/v1624975618/getaways-guru/static-files/background-pattern_jgpvmh.svg");
  background-repeat: repeat-x;
  background-size: 18%;
  border-bottom: 1px solid #e7ebf5;
}

.navbar-light {
  border-bottom: 1px solid #e7ebf5;
}

.top-nav-wrapper {
  margin: 0 auto;
  padding: 12px 0;
  .top-nav-title {
    font-size: 1.8em;
    margin: 0 0 5px 0;
    text-shadow: 0 0 20px rgb(255 255 255) !important;
  }
  .top-nav-title.db {
    margin: 0 auto;
  }
  .top-nav-subtitle {
    max-width: 70%;
    margin-bottom: 0;
    font-size: 0.9em;
    color: #6376a0;
  }
  .top-nav-meta {
    list-style: none;
    padding: 0;
    margin: 10px 0 0 0;
    font-size: 0.9em;
    li {
      display: block;
      margin-right: 10px;
    }
  }
}
/* ... */

